# l4py

./: .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  plan.txt  pyproject.toml
_extras/: links.md
advanced/: ex_bug_tc_deriving_fail.lean  ex_bug_tc_extend_missing.lean  ex_bug_tc_missing_constraint.lean  ex_bug_tc_missing_instance.lean  ex_bug_tc_wrong_method.lean  ex_tc_doubleable.lean  ex_tc_extend_class.lean  ex_tc_manual_repr.lean  ex_tc_summarizable.lean  ex_tc_two_constraints.lean  index.md  tc_basic.lean  tc_deriving.lean  tc_extend.lean  tc_multiple.lean  tc_polymorphic.lean
archive/: archive.lean  archive_dir.lean  ex_bug_hash_digits.lean  ex_bug_manifest_path.lean  ex_bug_no_dedup.lean  ex_bug_restore_path.lean  ex_bug_snapshot.lean  ex_diff_manifest.lean  ex_find_by_hash.lean  ex_find_file.lean  ex_unique_blobs.lean  index.md
basics/: check_update.lean  conditional.lean  conditional_incomplete.lean  conditional_inconsistent_err.lean  define_values.lean  ex_bug_conditional.lean  ex_bug_let_bind.lean  ex_bug_match.lean  ex_bug_option.lean  ex_bug_recursion.lean  ex_bug_types.lean  ex_double.lean  ex_greeting.lean  ex_list_length.lean  ex_sum_list.lean  ex_swap_tuple.lean  ex_update_struct.lean  format_strings.lean  func_partial.lean  guards.lean  idiomatic.lean  index.md  let_binding.lean  map_filter_fold.lean  match.lean  option_type.lean  simple_functions_0.lean  simple_functions_1.lean  simple_functions_2.lean  simple_lists.lean  simple_struct.lean  simple_tuples.lean  strict_values_err.lean  sum_list.lean  (+1 more)
(+238 files in other folders)
