[project]
name = "l4py"
description = "Lean for Python Programmers"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "mccole>=3.1.0",
]

[tool.mccole]
brand = "L4Py"
skips = [
    "*.json",
    "*.lean",
    "*.out",
    "*.sh",
    "*~",
    ".lake/**",
    "archive/archive-dir/**",
    "build/.lake/**",
    "proof/.lake/**",
    "bin/**",
    "docs/**",
    "lean-toolchain",
    "uv.lock"
]
