[project]
name = "l4py"
description = "Lean for Python Programmers"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "mccole>=3.1.0",
]

[tool.mccole]
brand = "L4Py"
skips = [
    "*.json",
    "*.lean",
    "*.out",
    "*.sh",
    "*~",
    "AGENTS.md",
    "Makefile",
    "archive/archive-dir/**",
    "bin",
    "dependencies.mk",
    "docs",
    "lean-toolchain",
    "typos.toml",
    "uv.lock"
]
